Working on Data

--- a/CodingIndia/website/templates/website/contactus.html
+++ b/CodingIndia/website/templates/website/contactus.html
@@ -91,31 +91,21 @@
                         <div class="mil-mb-60">
                             <h5 class="mil-list-title mil-mb-30">Support Request</h5>
                             <p class="mil-mb-20">Our experts are ready to answer your questions.</p>
-                            <a href="contact.html" class="mil-link mil-link-sm"><span>Support Now</span><i class="fas fa-arrow-right"></i></a>
                         </div>
 
                         <div class="mil-divider mil-mb-60"></div>
 
                         <div class="mil-mb-60">
-                            <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/8.svg" alt="icon">
-                            </div>
-                            <h5 class="mil-list-title mil-mb-30">Need Help?</h5>
-                            <p>For technical questions or billing questions, please contact Customer Care.</p>
+                            <h5 class="mil-list-title mil-mb-10">Have a Question?</h5>
+                            <p>Feel free to reach out to us with any questions you may have. Our dedicated support team is here to assist you.</p>
                         </div>
-
+                        
                         <div class="mil-mb-60">
-                            <div class="mil-icon-frame mil-icon-frame-md mil-icon-bg mil-mb-30">
-                                <img src="img/icons/md/9.svg" alt="icon">
-                            </div>
-                            <h5 class="mil-list-title mil-mb-30">Needs More Info?</h5>
-                            <p>For technical questions or billing questions, please contact Customer Care.</p>
+                            <h5 class="mil-list-title mil-mb-10">Need More Information?</h5>
+                            <p>If you need more details about our services or have specific inquiries, don't hesitate to get in touch.</p>
                         </div>
 
                         <div class="mil-divider mil-mb-60"></div>
-
-                        <a href="contact.html" class="mil-link mil-link-sm mil-mb-15"><span>Legality Guide</span><i class="fas fa-arrow-right"></i></a><br>
-                        <a href="contact.html" class="mil-link mil-link-sm"><span>Security Center</span><i class="fas fa-arrow-right"></i></a>
 
                     </div>
                 </div>
