Working on Blogs

--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -31,20 +31,20 @@
                     <div class="col-lg-6 col-xl-6 mil-mb-120">
                         <div class="row">
                             {% for blog in blogs %}
-                                <a href="publication.html" class="mil-card mil-mb-60">
+                                <a href="{% url 'readblog' blog.slug %}" class="mil-card mil-mb-60">
                                     <div class="mil-cover-frame">
                                         <img src="{{blog.img}}" alt="project">
                                     </div>
                                     <div class="mil-description">
                                         <div class="mil-card-title">
                                             <ul class="mil-dot-list mil-text-sm mil-mb-15">
-                                                <li>Management</li>
-                                                <li>29 Oct. 2023</li>
+                                                <li>{{blog.category}}</li>
+                                                <li>{{blog.pub_date}}</li>
                                             </ul>
                                             <h4>{{blog.title}}.</h4>
                                         </div>
                                         <div class="mil-card-text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempor incididunt dolor sit amet, consectetur adipisicing.</p>
+                                            <p>{{blog.content|safe}}</p>
                                         </div>
                                     </div>
                                 </a>
