--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -44,9 +44,9 @@
                                 <li class="mil-has-children">
                                     <a href="#.">Services</a>
                                     <ul>
-                                        <li><a href="#">AI/ML</a></li>
-                                        <li><a href="#">Website Development</a></li>
-                                        <li><a href="#">App Development</a></li>
+                                        <li><a href="{% url 'contactus' %}">AI/ML</a></li>
+                                        <li><a href="{% url 'contactus' %}">Website Development</a></li>
+                                        <li><a href="{% url 'contactus' %}">App Development</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="{% url 'blogs_index' %}">Blog</a></li>
