Working on changes

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -92,8 +92,8 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-xl-8">
-                            <span class="mil-suptitle mil-mb-60"><span class="mil-light">The Next</span> <span class="mil-accent">Gen</span></span>
-                            <h1 class="mil-mb-60"><span class="mil-uppercase mil-light">We Provide Services <br>and Solutions</span> <span class="mil-font-3 mil-accent">To Enterprise</span></h1>
+                            <span class="mil-suptitle mil-mb-60"><span class="mil-light">Coding</span> <span class="mil-accent">India</span></span>
+                            <h1 class="mil-mb-60"><span class="mil-uppercase mil-light">Lets Transform <br>India to</span> <span class="mil-font-3 mil-accent">Digital India</span></h1>
                             <div class="mil-flex-hori-center">
                                 <div>
                                     <a href="{% url 'contactus' %}" class="mil-button mil-border mil-light"><span>Let’s Talk</span></a>
@@ -107,14 +107,14 @@
                                     <div class="mil-plus">
                                         <div class="mil-hover-window">
                                             <div class="mil-window-content">
-                                                <h5 class="mil-dark mil-mb-15">Tea For You</h5>
+                                                <h5 class="mil-dark mil-mb-15">Want To Learn Coding?</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">We have a dedicated team of experts in all Domain.</p>
+                                                <p class="mil-text-sm" style="color: black;">Want To Learn Coding but don't know where to start?</p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
                                             <div class="mil-plus-icon">+</div>
-                                            <h6 class="mil-light">Dedicated Team</h6>
+                                            <h6 class="mil-light">Learn Coding</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -122,14 +122,14 @@
                                     <div class="mil-plus">
                                         <div class="mil-hover-window">
                                             <div class="mil-window-content">
-                                                <h5 class="mil-dark mil-mb-15">Experts</h5>
+                                                <h5 class="mil-dark mil-mb-15">Web Development From Scratch</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">We are good in Building Websites, Mobile Apps etc</p>
+                                                <p class="mil-text-sm" style="color: black;">Want To Learn Website Development From Scratch without any cost? </p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
                                             <div class="mil-plus-icon">+</div>
-                                            <h6 class="mil-light">Developers</h6>
+                                            <h6 class="mil-light">Learn Website Development</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -137,9 +137,9 @@
                                     <div class="mil-plus">
                                         <div class="mil-hover-window">
                                             <div class="mil-window-content">
-                                                <h5 class="mil-dark mil-mb-15">AI</h5>
+                                                <h5 class="mil-dark mil-mb-15">AI & ML</h5>
                                                 <div class="mil-divider mil-divider-left mil-mb-15"></div>
-                                                <p class="mil-text-sm">Lets deep dive into AI/ML </p>
+                                                <p class="text-dark" style="color: black;">Lets deep dive into AI/ML, Generative AI and various Future Trends. </p>
                                             </div>
                                         </div>
                                         <div class="mil-item-hover">
@@ -171,7 +171,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -185,7 +185,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -199,7 +199,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -215,7 +215,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -229,7 +229,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -242,7 +242,7 @@
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
                                 <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 180px; height: 150px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -288,7 +288,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
 
-                            <a href="https://jaspo.codingindia.co.in/" class="mil-card">
+                            <a href="https://jaspo.shop/" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="{% static 'images/jaspohome.png' %}" alt="project">
                                 </div>
@@ -342,7 +342,7 @@
                         </div>
                         <div class="swiper-slide">
 
-                            <a href="project.html" class="mil-card">
+                            <a href="#" title="Demo Only... Please Contact" class="mil-card">
                                 <div class="mil-cover-frame">
                                     <img src="{% static 'images/erp.png' %}" alt="project">
                                 </div>
@@ -403,7 +403,7 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 65%"></div>
+                                <div class="mil-skill-prog" style="width: 90%"></div>
                             </div>
                             <div class="mil-text-sm">90%</div>
                         </div>
@@ -415,9 +415,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 65%"></div>
+                                <div class="mil-skill-prog" style="width: 75%"></div>
                             </div>
-                            <div class="mil-text-sm">65%</div>
+                            <div class="mil-text-sm">75%</div>
                         </div>
 
                     </div>
@@ -427,9 +427,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 90%"></div>
+                                <div class="mil-skill-prog" style="width: 95%"></div>
                             </div>
-                            <div class="mil-text-sm">90%</div>
+                            <div class="mil-text-sm">95%</div>
                         </div>
 
                     </div>
@@ -439,9 +439,9 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 50%"></div>
+                                <div class="mil-skill-prog" style="width: 75%"></div>
                             </div>
-                            <div class="mil-text-sm">60%</div>
+                            <div class="mil-text-sm">75%</div>
                         </div>
 
                     </div>
@@ -451,7 +451,7 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 95%"></div>
+                                <div class="mil-skill-prog" style="width: 75%"></div>
                             </div>
                             <div class="mil-text-sm">75%</div>
                         </div>
@@ -475,7 +475,7 @@
 
                         <div class="mil-skill-frame mil-mb-60">
                             <div class="mil-skill-track">
-                                <div class="mil-skill-prog" style="width: 90%"></div>
+                                <div class="mil-skill-prog" style="width: 60%"></div>
                             </div>
                             <div class="mil-text-sm">60%</div>
                         </div>
@@ -686,22 +686,6 @@
                             <img src="img/logo/logo-light.png" alt="" class="mil-logo mil-mb-30" style="width: 140px">
 
                             <p class="mil-light-soft mil-mb-30">We're your trusted partner in web development. At <a href="https://codingindia.co.in/">Coding India</a>, we transform ideas into stunning websites that make a mark. With a passion for innovation and a commitment to excellence, we create web solutions tailored to your needs. Let us bring your digital vision to life.</p>
-
-                            <a href="#." class="mil-app-btn mil-mb-5">
-                                <i class="fab fa-google-play"></i>
-                                <div class="mil-app-text">
-                                    <span class="mil-accent mil-text-sm">Available on the</span>
-                                    <div class="mil-h6">Google Play</div>
-                                </div>
-                            </a>
-
-                            <a href="#." class="mil-app-btn">
-                                <i class="fab fa-apple"></i>
-                                <div class="mil-app-text">
-                                    <span class="mil-accent mil-text-sm">Download on the</span>
-                                    <div class="mil-h6">App Store</div>
-                                </div>
-                            </a>
 
                         </div>
                         <div class="col-xl-7 mil-mt-60-adapt">
