--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-adsense-account" content="ca-pub-2255488648162796">
 
     {% load static %}
     <!-- bootstrap grid css -->
@@ -26,6 +27,9 @@
 
     gtag('config', 'G-6CFWQNJKH8');
 </script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2255488648162796"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
