Working on changes

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -53,7 +53,7 @@
                                         <li><a href="{% url 'contactus' %}">App Development</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="{% url 'blogs_index' %}">Blog</a></li>
+                                <li><a href="{% url 'blogs_index' %}">Blogs</a></li>
                                 <li><a href="{% url 'contactus' %}">Contact Us</a></li>
                             </ul>
                             <div class="mil-search-icon">
@@ -720,16 +720,14 @@
 
                 <div class="mil-footer-links">
                     <ul class="mil-social mil-light">
-                        <li class="mil-adapt-links"><a href="#.">Facebook</a><a href="#.">FB</a></li>
-                        <li class="mil-adapt-links"><a href="#.">Instagram</a><a href="#.">IG</a></li>
-                        <li class="mil-adapt-links"><a href="#.">LinkedIn</a><a href="#.">IN</a></li>
-                        <li class="mil-adapt-links"><a href="#.">Twitter</a><a href="#.">TW</a></li>
-                        <li class="mil-adapt-links"><a href="#.">YouTube</a><a href="#.">YT</a></li>
+                        <li class="mil-adapt-links"><a href="https://www.instagram.com/codingindia20/">Instagram</a><a href="https://www.instagram.com/codingindia20/">IG</a></li>
+                        <li class="mil-adapt-links"><a href="https://www.linkedin.com/in/digamber-jha-5045221a5/">LinkedIn</a><a href="#.">IN</a></li>
+                        <!-- <li class="mil-adapt-links"><a href="#.">Twitter</a><a href="#.">TW</a></li> -->
+                        <li class="mil-adapt-links"><a href="https://www.youtube.com/@CodinIndia">YouTube</a><a href="https://www.youtube.com/@CodinIndia">YT</a></li>
                     </ul>
                     <ul class="mil-additional-links mil-light">
-                        <li><a href="#.">Terms & Condition</a></li>
-                        <li><a href="#.">Privacy Policy</a></li>
-                        <li><a href="#.">Sitemap</a></li>
+                        <li><a href="{% url 'privacypolicy' %}">Terms & Condition</a></li>
+                        <li><a href="{% url 'privacypolicy' %}">Privacy Policy</a></li>
                     </ul>
                 </div>
             </div>
