--- a/CodingIndia/website/templates/website/privacypolicy.html
+++ b/CodingIndia/website/templates/website/privacypolicy.html
@@ -83,3 +83,7 @@
 <p>Consent</p>
 
 <p>By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</p>
+
+<div class="container" style="margin: 35px;">
+<a href="/" class="btn btn-outline-success" style="border: 1px solid green; padding: 15px; margin: 35px 105px;">Agree</a>
+</div>
