--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -9,16 +9,16 @@
 {% block content %}
 
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
-            <img src="img/deco/map.png" alt="background" class="mil-background-image">
+        <div class="mil-banner-sm mil-deep-bg" style="background-color: black;">
+            <img src="" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="/" style="color: white;">Home</a></li>
+                        <li><a href="#" style="color: white;">Blog</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Our Blog</h2>
+                    <h2 class="mil-uppercase" style="color: white;">Our Blog</h2>
                 </div>
             </div>
         </div>
