--- a/CodingIndia/website/templates/website/contactus.html
+++ b/CodingIndia/website/templates/website/contactus.html
@@ -2,16 +2,16 @@
 
 {% block content %}
         <!-- banner -->
-        <div class="mil-banner-sm mil-deep-bg">
+        <div class="mil-banner-sm mil-deep-bg" style="background-color: black;">
             <img src="img/deco/map.png" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="/" style="color: white;">Home</a></li>
+                        <li><a href="#" style="color: white;">Contact Us</a></li>
                     </ul>
-                    <h2 class="mil-uppercase">Talk With Our Team</h2>
+                    <h2 class="mil-uppercase" style="color: white;">Talk With Our Team</h2>
                 </div>
             </div>
         </div>
