Working on chnges

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -54,6 +54,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="{% url 'blogs_index' %}">Blogs</a></li>
+                                <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
                                 <li><a href="{% url 'contactus' %}">Contact Us</a></li>
                             </ul>
                             <div class="mil-search-icon">
@@ -194,8 +195,8 @@
                             </div>
                             <div class="mil-service-text">
                                 <h5 class="mil-mb-30"><span class="mil-accent">02</span> SEO</h5>
-                                <p>On-page and off-page SEO to improve a website's search engine rankings.</p>
-                                <p>Keyword research and optimization.</p>
+                                <p>On-page and off-page SEO to improve a website's search engine rankings.
+                                Keyword research and optimization.</p>
                                 <p>Content optimization and creation for search engines.</p>
                             </div>
                         </div>
@@ -225,7 +226,7 @@
                             <div class="mil-service-text">
                                 <h5 class="mil-mb-30"><span class="mil-accent">01</span> Pay-Per-Click (PPC) Advertising</h5>
                                 <p>Google Ads and Bing Ads management.</p>
-                                <p>Social media advertising campaigns (e.g., Facebook Ads, Instagram Ads, LinkedIn Ads).</p>
+                                <p>Social media advertising campaigns (e.g., Facebook, Instagram & LinkedIn Ads).</p>
                                 <p>Keyword research and ad creation.</p>
                             </div>
                         </div>
@@ -240,6 +241,8 @@
                                 <h5 class="mil-mb-30"><span class="mil-accent">02</span> Chatbot and AI Marketing</h5>
                                 <p>Implementing chatbots for customer service and marketing.</p>
                                 <p>Leveraging artificial intelligence for personalization and insights.</p>
+                                <p>Intractive Chatbots.</p>
+
                             </div>
                         </div>
                         <div class="mil-divider mil-divider-left"></div>
