--- a/CodingIndia/website/templates/website/contactus.html
+++ b/CodingIndia/website/templates/website/contactus.html
@@ -3,7 +3,7 @@
 {% block content %}
         <!-- banner -->
         <div class="mil-banner-sm mil-deep-bg" style="background-color: black;">
-            <img src="img/deco/map.png" alt="background" class="mil-background-image">
+            <img src="" alt="background" class="mil-background-image">
             <div class="mil-deco mil-deco-accent" style="top: 47%; right: 10%; transform: rotate(90deg)"></div>
             <div class="mil-banner-content">
                 <div class="container mil-relative">
