Working on chnges

--- a/CodingIndia/blogs/templates/blogs/index.html
+++ b/CodingIndia/blogs/templates/blogs/index.html
@@ -16,9 +16,9 @@
                 <div class="container mil-relative">
                     <ul class="mil-breadcrumbs mil-mb-30">
                         <li><a href="/" style="color: white;">Home</a></li>
-                        <li><a href="#" style="color: white;">Blog</a></li>
+                        <li><a href="#" style="color: white;">Blogs</a></li>
                     </ul>
-                    <h2 class="mil-uppercase" style="color: white;">Our Blog</h2>
+                    <h2 class="mil-uppercase" style="color: white;">Our Blogs</h2>
                 </div>
             </div>
         </div>
